--- a/JavaScript30/01 - JavaScript Drum Kit/index-START.html
+++ b/JavaScript30/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+function removeTransition(e) {
+  if (e.propertyName !== 'transform') return;
+  console.log(e);
+  this.classList.remove('playing');
+} 
 
+function playSound(event) {
+  const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
+  const key = document.querySelector(`.key[data-key="${event.keyCode}"]`);
+  if(!audio) return; //stop the function
+  audio.currentTime = 0;
+  audio.play();
+  key.classList.add('playing');
+}
+
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+window.addEventListener('keydown', playSound);
 </script>
 
 
